filter-wraper-height-fixed

--- a/src/app/modules/shared-product-listing/shared-product-listing.component.scss
+++ b/src/app/modules/shared-product-listing/shared-product-listing.component.scss
@@ -18,7 +18,7 @@
 .filter-wrapper {
     position: fixed;
     // bottom: -200px;
-    top: 54px;
+    top: 56px;
     z-index: 9;
     left: 0px;
     width: 100%;
